Reformatted MD files and fixed errorprone illegal access warning